WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51438
Can't stop QT music on santastreefarm.com
https://bugs.webkit.org/show_bug.cgi?id=51438
Summary
Can't stop QT music on santastreefarm.com
Anders Carlsson
Reported
2010-12-21 17:52:18 PST
Can't stop QT music on santastreefarm.com
Attachments
Patch
(7.97 KB, patch)
2010-12-21 17:55 PST
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-12-21 17:52:41 PST
<
rdar://problem/8741152
>
Anders Carlsson
Comment 2
2010-12-21 17:55:26 PST
Created
attachment 77174
[details]
Patch
Darin Adler
Comment 3
2010-12-21 17:57:09 PST
Comment on
attachment 77174
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=77174&action=review
> WebKit2/WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:773 > +static NPBool NPN_ConvertPoint(NPP npp, double sourceX, double sourceY, NPCoordinateSpace sourceSpace, double* destX, double* destY, NPCoordinateSpace destSpace)
I hate the name npp!
> WebKit2/WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:101 > + switch (sourceSpace) {
Wow, are all these cases covered in testing?
> WebKit2/WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:120 > + sourceYInScreenSpace = [[[NSScreen screens] objectAtIndex:0] frame].size.height - sourceY;
Seems like we should use a helper function instead of repeating this twice. WebCore has a helper for this, but you could just use a local one.
Anders Carlsson
Comment 4
2010-12-21 18:01:44 PST
Committed
r74445
: <
http://trac.webkit.org/changeset/74445
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug